# rfb-polars-etl

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
benchmarks/: run_benchmark.py
src/rfb_polars_etl/: config.py  main.py  pipeline.py  query_municipios.py
src/rfb_polars_etl/grupos_cidades/: pipeline_grupos.py
src/rfb_polars_etl/pipe_emp/: config_emp.py  pipeline_emp.py
src/rfb_polars_etl/pipe_stab/: config_estab.py  pipeline_estab.py
tests/: test_pipeline.py  test_pipeline_emp.py
