[project]
name = "rfb-polars-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars[rtcompat] (>=1.39.3,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "rfb_polars_etl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "psutil (>=7.2.2,<8.0.0)"
]
