[tool.poetry]
name = "rfb-polars-etl"
version = "0.1.0"
description = "Pipeline ETL out-of-core para Estabelecimentos da Receita Federal (RFB)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "rfb_polars_etl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
polars = { extras = ["rtcompat"], version = ">=1.39.3,<2.0.0" }
pyarrow = ">=23.0.1,<24.0.0"
xlsxwriter = ">=3.2.9,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
ruff = ">=0.15.11,<0.16.0"
matplotlib = ">=3.10.8,<4.0.0"
psutil = ">=7.2.2,<8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
